tests/rosetta/transpiler/scheme/24-game-solve.error
exit status 70
ERROR: hash-table-ref: not a Hash-Table: nil
  called from hash-table-ref on line 280 of file /usr/share/chibi/init-7.scm
  called from <anonymous> on line 260 of file /workspace/mochi/tests/rosetta/transpiler/scheme/24-game-solve.scm
  called from <anonymous> on line 280 of file /usr/share/chibi/init-7.scm
  called from call-with-current-continuation on line 848 of file /usr/share/chibi/init-7.scm
  called from <anonymous> on line 374 of file /workspace/mochi/tests/rosetta/transpiler/scheme/24-game-solve.scm
  called from loop15 on line 364 of file /workspace/mochi/tests/rosetta/transpiler/scheme/24-game-solve.scm
  called from call-with-current-continuation on line 848 of file /usr/share/chibi/init-7.scm
  called from <anonymous> on line 360 of file /workspace/mochi/tests/rosetta/transpiler/scheme/24-game-solve.scm
  called from loop11 on line 304 of file /workspace/mochi/tests/rosetta/transpiler/scheme/24-game-solve.scm
  called from call-with-current-continuation on line 848 of file /usr/share/chibi/init-7.scm
  called from <anonymous> on line 292 of file /workspace/mochi/tests/rosetta/transpiler/scheme/24-game-solve.scm
  called from loop9 on line 289 of file /workspace/mochi/tests/rosetta/transpiler/scheme/24-game-solve.scm
  called from call-with-current-continuation on line 848 of file /usr/share/chibi/init-7.scm
  called from <anonymous> on line 277 of file /workspace/mochi/tests/rosetta/transpiler/scheme/24-game-solve.scm
  called from call-with-current-continuation on line 848 of file /usr/share/chibi/init-7.scm
  called from <anonymous> on line 374 of file /workspace/mochi/tests/rosetta/transpiler/scheme/24-game-solve.scm
  called from loop15 on line 364 of file /workspace/mochi/tests/rosetta/transpiler/scheme/24-game-solve.scm
  called from call-with-current-continuation on line 848 of file /usr/share/chibi/init-7.scm
  called from <anonymous> on line 360 of file /workspace/mochi/tests/rosetta/transpiler/scheme/24-game-solve.scm
  called from loop11 on line 300 of file /workspace/mochi/tests/rosetta/transpiler/scheme/24-game-solve.scm
  called from call-with-current-continuation on line 848 of file /usr/share/chibi/init-7.scm
  called from <anonymous> on line 292 of file /workspace/mochi/tests/rosetta/transpiler/scheme/24-game-solve.scm
  called from loop9 on line 285 of file /workspace/mochi/tests/rosetta/transpiler/scheme/24-game-solve.scm
  called from call-with-current-continuation on line 848 of file /usr/share/chibi/init-7.scm
  called from <anonymous> on line 277 of file /workspace/mochi/tests/rosetta/transpiler/scheme/24-game-solve.scm
  called from call-with-current-continuation on line 848 of file /usr/share/chibi/init-7.scm
  called from <anonymous> on line 367 of file /workspace/mochi/tests/rosetta/transpiler/scheme/24-game-solve.scm
  called from loop15 on line 364 of file /workspace/mochi/tests/rosetta/transpiler/scheme/24-game-solve.scm
  called from call-with-current-continuation on line 848 of file /usr/share/chibi/init-7.scm
  called from <anonymous> on line 360 of file /workspace/mochi/tests/rosetta/transpiler/scheme/24-game-solve.scm
  called from loop11 on line 298 of file /workspace/mochi/tests/rosetta/transpiler/scheme/24-game-solve.scm
  called from call-with-current-continuation on line 848 of file /usr/share/chibi/init-7.scm
  called from <anonymous> on line 292 of file /workspace/mochi/tests/rosetta/transpiler/scheme/24-game-solve.scm
  called from loop9 on line 282 of file /workspace/mochi/tests/rosetta/transpiler/scheme/24-game-solve.scm
  called from call-with-current-continuation on line 848 of file /usr/share/chibi/init-7.scm
  called from <anonymous> on line 277 of file /workspace/mochi/tests/rosetta/transpiler/scheme/24-game-solve.scm
  called from call-with-current-continuation on line 848 of file /usr/share/chibi/init-7.scm
  called from <anonymous> on line 480 of file /workspace/mochi/tests/rosetta/transpiler/scheme/24-game-solve.scm
  called from loop18 on line 475 of file /workspace/mochi/tests/rosetta/transpiler/scheme/24-game-solve.scm
  called from call-with-current-continuation on line 848 of file /usr/share/chibi/init-7.scm
  called from call-with-current-continuation on line 848 of file /usr/share/chibi/init-7.scm
  called from <anonymous> on line 546 of file /workspace/mochi/tests/rosetta/transpiler/scheme/24-game-solve.scm
  called from <anonymous> on line 1292 of file /usr/share/chibi/init-7.scm
  called from <anonymous> on line 821 of file /usr/share/chibi/init-7.scm
 8
 6
 1
 7
:  
